# cult-cargo

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
cultcargo/: aimfast.yml  bdsf.yml  breizorro.yml  casa-calibration.yml  casa-concat.yml  casa-flag.yml  casa-importgmrt.yml  casa-listobs.yml  casa-setjy.yml  casa-split.yml  crystalball.yml  cubical.yml  fitstool.yml  meqtree-pipeliner.yaml  meqtree-pipeliner.yml  mosaic-queen.yml  msutils.yml  pfb-clean.yml  pfb-imaging.yml  quartical.yml  rfinder.yml  shadems.yml  smops.yml  spimple-spifit.yml  stimela.conf  sunblocker.yml  taql.yml  tigger-convert.yml  tigger.yml  tricolour.yml  utils.py  wsclean.yml
cultcargo/builder/: build-cargo.py  build_cargo.py  build_utils.py  cargo-manifest.yml
cultcargo/casa/: bandpass.yml  calibration.yml  concat.yml  flag.yml  importgmrt.yml  listobs.yml  polcal.yml  setjy.yml  split.yml
cultcargo/genesis/: cult-cargo-base.yml  wsclean.yml
cultcargo/genesis/casa/: casa-inputs.yml
cultcargo/genesis/meqtrees/: __init__.py
cultcargo/genesis/pfb-clean/: sync_config.py
cultcargo/genesis/pfb-clean/latest/: cgopts.yml  clean.yaml  degrid.yaml  dist.yml  fastim.yaml  forward.yaml  fwdbwd.yaml  grid.yaml  gridding.yml  init.yaml  model2comps.yaml  out.yml  pdopts.yml  pmopts.yml  restore.yaml  spotless.yaml  (+2 more)
cultcargo/genesis/pfb-imaging/: sync_config.py
cultcargo/genesis/quartical/: __init__.py  argument_schema.yaml  argument_schema.yml  config_classes.py  external.py  gain_schema.yaml
cultcargo/genesis/wsclean/: __init__.py  wsclean-base.yml
cultcargo/images/: Dockerfile.generic.pip
cultcargo/images/base-cult/: Dockerfile
cultcargo/images/casa/: Dockerfile  Dockerfile.base
cultcargo/images/casa6/: Dockerfile  casasiteconfig.py
cultcargo/images/ddfacet/: Dockerfile  apt.sources.list
cultcargo/images/killms/: Dockerfile
cultcargo/images/meqtrees/: Dockerfile.kern9
cultcargo/images/pfb-clean/: Dockerfile
cultcargo/images/python-astro/: Dockerfile
cultcargo/images/python-base/: Dockerfile
cultcargo/images/tricolour/: Dockerfile
cultcargo/images/wsclean/: Dockerfile.build  Dockerfile.build.2x  Dockerfile.kern  Dockerfile.kern7  Dockerfile.kern9
tests/: casa-mstransform.json  simple_cab.py  test-recipe.yml
(+22 files in other folders)
