[tool.poetry]
name = "cult-cargo"
version = "0.2.0"
description = "Curated cargo of standard radio astronomy packages for stimela 2.0"
authors = ["Oleg Smirnov, Sphesihle Makhathini"]
license = "MIT"
readme = "README.md"
packages = [{include = "cultcargo"}]

[tool.poetry.dependencies]
python = "^3.8"
stimela = "^2.0rc2"

[tool.poetry.group.builder]
optional = true

[tool.poetry.group.builder.dependencies]
click = "^8.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

## add section for dev component which installs builder and Dockerfiles