[tool.poetry]
name = "cult-cargo"
version = "0.1.2rc7"
description = "Curated cargo of standard radio astronomy packages for stimela 2.0"
authors = ["Oleg Smirnov, Sphesihle Makhathini"]
license = "MIT"
readme = "README.md"
packages = [{include = "cultcargo"}]

[tool.poetry.dependencies]
python = "^3.7"
stimela = "^2.0rc14"

[tool.poetry.scripts]
build-cargo = "cultcargo.builder.build_cargo:driver"

[tool.poetry.group.builder]
optional = true

[tool.poetry.group.builder.dependencies]
click = "^8.1"
requests = "^2.30.0"

[tool.poetry.group.tests]
optional = true

[tool.poetry.group.tests.dependencies]
pytest = "^7.1.3"
flake8 = "*"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
ipython = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

## add section for dev component which installs builder and Dockerfiles
